Fixed every file to be more formal
Inserted a poster.
Made changes to a couple of layouts.
All the TODOs should be removed and text written istead.

--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@
 	    <div class="flip-card">
 		  <div class="flip-card-inner">
 			<div class="flip-card-front">
-			  <img src="imgs/profile.jpg" alt="Avatar" style="width:300px;height:300px;">
+			  <img src="imgs/profile.jpg" alt="Avatar" style="width:300px;height:350px;">
 			</div>
 			<div class="flip-card-back">
 			  <h1>Matias Ijäs</h1>
-			  <p>Programmer, Researcher and Student</p>
+			  <p>Programmer, Researcher and Student</p></br>
 			  <div style="text-align:left; margin-left:30px;">
 			  <p><b>Work Experience:</b> ~3 years</p>
 			  <p><b>Student Credits:</b> ~180 / 300</p>
@@ -47,7 +47,15 @@
 	  <div class="col-sm-6">
 		<h3>Description</h3>
 		<p>
-		Todo
+		I am a competitive person and I work hard, but I still am not boring. My parents have raised me to be motivated to everything I do, so I’ll do my best. 
+		I am not the most outgoing person, but I certainly respect other people and get along with everybody. Some soft skills like time management, leadership and teamwork come free with me. </br></br>
+		
+		My greatest strength is problem solving. I often think logically, but when I can't find the simple solution, I think out of the box. 
+		I learn things fast and apply those in real life, especially I can solve real-world problems with computer science. Nowadays, I have learned multiple machine learning methods 
+		and mathematical modeling – Those are great tools for software analytics, automated testing and research. </br></br>
+		
+		My next dream is to work abroad – that will happen in 2019. My interests are programming and scientific research. I have a few publications, which are available. 
+		Even though, I program quite a lot for school and do my own projects, I do not share those easily. There might be just a couple of projects in my Github
 		</p>
 	  </div>
 	</div>
@@ -56,12 +64,16 @@
 	<div class="row">
       <div class="col-sm-6">
 		<h3>Hobbies</h3>
-		<p>Todo</p>
+		<p>Programming, Strategy games, Board Games - These are the things I do almost every day.
+		</br></br>
+		I like to play floorball once a week. Sometimes I go play disc golf to the Hervanta course. I have tried out about 30 different disc golf courses in Finland.</p>
 	  </div>
 	  <div class="col-sm-6">
 		<h3>Causes I care</h3>
 		<p>
-		Todo
+		Human rights - I am not "an activist", but I prefer equal rights to all individuals.</br></br>
+		Children - Who wouldn't care about children? In few years, I would like to have a new family.
+		That means the world should be safe and fair place for everyone. I will try to raise my future kids well.
 		</p>
 	  </div>
 	</div>
@@ -72,18 +84,31 @@
 		<h3>Top 3 Experiences</h3>
 		<h4>ECSM</h4>
 		<p>
-		Todo
+		I cannot even describe how amazing the whole experience was. It was my first time to go and stay in a foreign country over a day.
+		The first evening was marvellous with highly educated people from Poland, UK, Finland and South Africa. After that, the whole conference went great.
+		I liked almost all of the presentations - one of those were the best I've ever seen. My presentation (both poster and paper) was great.
+		At the end of the conference, I received an award for best poster. That crowned everything.
 		</p>
 		<a href="https://www.academic-conferences.org/conferences/ecsm/ecsm-future-and-past/">ECSM Website</a>
 		
 		<h4>Climbing on top of Halti</h4>
 		<p>
-		Todo
+		A few days before our trip to Halti, I crashed with my bicycle. Many ugly bruises and a few bleeding spots...
+		My toenail was weird. During that trip, I went to one of my friend's wedding. We drove to the Norway side of
+		the Halti and climbed about 6 hours to the top of the highest mountain in Finland. 80 percent of the trip had
+		awful lot of rocks and boulders. We moved slowly and I didn't even realize risks - or I didn't care. We managed to
+		climb on top and took a few pictures. Then we got back ... slowly, but surely.
 		</p>
 
 		<h4>End of the Military Service</h4>
 		<p>
-		Todo
+		The first two months were quite hard in the military. It was not mentally hard, but physically. I was sick 
+		almost half of that time, because I got some kind of weird flu. Säkylä taught me discipline and I kept my opinionsAfter
+		by myself. After the training period in Säkylä, I was 7 months in Riihimäki. In Riihimäki I was a researcher and a programmer.
+		The first three weeks there I was sick as well. So a total of 7 weeks that weird flu irritated me. Time there was
+		a lot easier. Before military service, I was afraid I would see some stupid people in Säkylä. That was not the case.
+		My roommates were great guys. I expected a lot from Riihimäki and I was satisfied: The people were smart and friendly.
+		I liked to be there a lot. It was surprisingly rewarding for me.
 		</p>
 	  </div>
 	  <div class="col-sm-6">
@@ -92,15 +117,24 @@
 		<p>
 		<b>Puheviestintä ja Neuvottelutaito</b>
 		</br>
-		Todo
+		The course was probably the best I have attended. I took it a few years ago and I noticed.
+		The first introduction was the day when I decided not to be shy anymore. It worked. I was a 
+		great presentator. After those first few lessons, I have been practising social skills daily.
+		I feel joy, when I discuss with new individuals - that is something I really enjoy.
 		</p>
 		<h4>Pattern Recognition and Machine Learning</h4>
 		<p>
-		Todo
+		The introduction course was already amazing. It taught me so much about machine learning.
+		The thing what makes this special is the difficulty. This is like one of the hardest courses 
+		in Tampere University. If I master all the things, I would be a great machine learning programmer.
+		I totally like the subject. The motivation is high and I work hard to learn - actually learn.
 		</p>
 		<h4>Bachelor's Thesis</h4>
 		<p>
-		Todo
+		While I wrote my Bachelor's thesis, I was happy. The subject was from my idea. I wanted to help
+		people. I have never been the person, who just complains and does nothing about a thing. This is a 
+		proof of that. I find solutions to real-world problems. I apply computer science, statistics, 
+		mathematics and machine learning into any case and poof... there might be something to report.
 		</p>
 	</div>
   </section>
@@ -110,32 +144,44 @@
 		<h3>Top 3 Movies</h3>
 		<h4>Gladiator (2000)</h4>
 		<p>
-		Todo
+		The movie resembles a true hero. It closely resembles of my actions, in similar circumstances.
+		If someone would turn against me and kill my family - Is the way of revenge the correct way?
+		I should watch the movie again, because the loyalty is one of the most important things I value.
 		</p>
 		
 		<h4>Kingdom of Heaven (2005)</h4>
 		<p>
-		Todo
+		Great movie! Would you try to be a noble by your heart in any circumstances?
+		Do you believe the actions speak louder than words? I at least believe so. Anyone could twist my 
+		words and take those out of the context. That way I would be such a monster, I never want to be.
 		</p>
 
 		<h4>The Terminal (2004)</h4>
 		<p>
-		Todo
+		I found this movie extremely funny. I was also emotional, which was weird. The way someone 
+		tries to achieve their dreams is mesmorizing. The main character helps other people, is friendly 
+		and works extremely hard. He even turns the situation from bad to great.
 		</p>
 	  </div>
 	  <div class="col-sm-6">
 		<h3>Top 3 Songs</h3>
 		<h4>Nightwish - Walking in the Air (1998)</h4>
 		<p>
-		Todo
+		The song combines extremely great singer with amazing music. The story of our life will go by fast, 
+		if we lived in the world of "make-believe". In your dreams, you can be anything - even fly with the Snowman to the North Pole.
 		</p>
 		<h4>The Cranberries - Zombie (1995)</h4>
 		<p>
-		Todo
+		In my opinion, the song does not only resemble the effects of IRA bombing, it resembles the effects of war. 
+		The location can be Africa, Middle East or any place. The truth is that all wars cause physical amd mental 
+		damage to a lot of people. Even though you are not damaged physically at war, a lot of those soldiers and 
+		civilians are like zombies. - No way of returning back to the positive person they were.
 		</p>
 		<h4>Queen - Bohemian Rhapsody (1975)</h4>
 		<p>
-		Todo
+		First of all, the singer has amazing vocal range. Secondly, the song is emotional. In my opinion, it resembles 
+		the mental issues of a person, who has lived a life of a roller-coaster. It is about history, family and 
+		religion. The person would want to leave, but it is not always possible. In the end, nothing really matters.
 		</p>
 	</div>
   </section>
