--- a/other.html
+++ b/other.html
@@ -28,32 +28,65 @@
 	  <div class="d2">
 		<h3>Awards</h3>
 		<p>
-		ECSM best poster</br>
-		TuKoKe 3rd award</br>
-		Paras ledivilkutin</br>
-		Survo -ristikkokilpailu</br>
-		MAOL matematiikkakilpailut</br>
-		muut valtakunnalliset kilpailut (yläaste, lukio)</br>
+		<h4>ECSM best poster</h4>
+		ECSM was an European conference concerning about social media. I presented a poster about
+		finding outcasts from a group. That way we could prevent loneliness, radicalization and improve the school systems.</br>
+		<h4>TuKoKe 3rd award</h4>
+		TuKoKe is a scientific writing/research competition in Finland. Our team presented a model of Somalian energy production.
+		It was a small part of a larger project, but visualization and critical results brough us to the finals.</br>
+		<h4>Paras ledivilkutin - Best led blinker</h4>
+		The competition was part of a course in TUT. The idea was to create a circuit board, which had leds.
+		Our team decided to make a game. The name of the game was "Teekkarin Tenttiviikko". The idea was to 
+		avoid all of the incoming deadlines - The game speed increased as the player progressed.</br>
+		<h4>Survo -ristikkokilpailu - Survo mathematical problem solving competition</h4>
+		The goal of the competition was to solve 4x4 matrix filled with numbers 1-16 as fast as possible.
+		I participated, while I was in the 9th grade and won one of the qualifying rounds.</br>
+		<h4>MAOL matematiikkakilpailut - MAOL mathematical competitions</h4>
+		I participated to all MAOL mathematical competitions from 7th grade to end of the high school.
+		Usually my standing were inbetween 20 and 50 in Finland.</br>
+		<h4>Other national competitions</h4>
+		I was very competetive, so I participated to almost any competition possible from 7th grade to the end of high school.
+		Usually, I was in the top-3 of my school. That was great, but not superior.</br>
+		<h4>(Gaming) Heroes of the Storm - Heroes Lounge</h4>
+		Our team participated in amateur/semi-pro series of Heroes of the Storm. Heroes Lounge was for all teams with different skill levels.
+		I was co-captain of our team Water Dragons. We were 3rd in the finals of the first season.
+		My nickname was NemoHostem. Other members of our team were Jufda (captain), Nebet, Kankeli, Oktaani, Smexlock and Yuisuke.
+		Our strategy was to be extremely aggressive and punish enemies from their mistakes.</br>
+		<h4>Elisa 5G - mobile gaming event</h4>
+		I participated in the qualifying event of Elisa Hatch 5G. It is a mobile gaming event.
+		I gain my spot at the finals by being top-4 in the qualifyings. I was 3rd. The final event will be held in Tampere later this year.</br>
 		</p>
 	  </div>
 	  <div class="d3">
-		<h3>Certificates</h3>
-		<p>
-		ECSM certificates</br>
-		Elements of AI</br>
-		</p>
-	  </div>
-	  <div class="d4">
 		<h3>Publications</h3>
 		<p>
-		Scalable Algorithm for ...</br>
-		Scythe mallinnus</br>
-		Kandi</br>
+		<h4>(Scythe) Team 3E: Power Production Model of the "Humanitarian Assistance and Global Warming" Simulator</h4>
+		This was part of a larger model. We modeled an optimal energy production method for Somalia.</br>
+		<h4>(Publication, ECSM) Scalable algorithm for computing influence spreading probabilities in social networks</h4>
+		This was a publication about influence spreading in existing social networks in English. 20 minute presentation was held in ECSM 2018.</br>
+		<h4>(Poster, ECSM) Scalable Algorithm for Finding Outcasts in Social Networks</h4>
+		This is a poster of my Bachelor's thesis in English. The poster was awarded as the best in ECSM 2018.</br>
+		<h4>(Bachelor's thesis, TUT) Scalable Algorithm for Finding Outcasts from Social Networks</h4>
+		I wanted to do a cross-scientific research for a real-world problem. Thesis has an abstract in English.</br>
 		</p>
 	  </div>
 	  </div>
 	  <div class="col-sm-6">
-	    Todo interaktiivinen kuva?
+	    <h4>Poster about Finding Outcasts in Social Networks</h4>
+		<embed src="imgs/poster.pdf" style="width:100%;height:760px;" type="application/pdf">
+		</br>
+		<div class="poster">
+		</div>
+		<div class="d4">
+		<h3>Certificates</h3>
+		<p>
+		<h4>ECSM certificates</h4>
+		I participated in the workshop about Big Data mining from social media.
+		I also attended the conference actively by presenting both the research paper and the poster.</br>
+		<h4>Elements of AI</h4>
+		I have completed the course Elements of AI. It was held by Helsinki (Open) University together with Finnish companies like Reaktor.</br>
+		</p>
+	    </div>	
 	  </div>
     </div>
   </section>
