--- a/school.html
+++ b/school.html
@@ -31,7 +31,8 @@
 		Major: Signal Processing and Machine Learning (Artificial Intelligence)</br>
 		Minor: Languages and Communication</br></br>
 		
-		I have completed enough credits for Bachelor's Degree. I have a couple of classes still remaining.</p>
+		I have completed enough credits for Bachelor's Degree. I have a couple of classes still remaining.
+		Currently, my main focus is to do as many courses, as well and as fast as possible.</p>
 		</div>
 		
 		<div class="d3">
