--- a/work.html
+++ b/work.html
@@ -29,7 +29,9 @@
     <p><strong>Researcher</strong></br>
     Finnish Defence Research Agency (FDRA)</br>
     May 2018 – August 2018</br></br>
-	Todo</p>
+	My main task was to do my Bachelor's thesis there. I completed that in one month, so I had a lot of time for many other tasks.
+	I prepared well for the ECSM conference, where I presented our team's scientific work and my poster. I got the best poster award, which was great.
+	Other tasks in FDRA included UI design, teamwork, team management and, of course, a lot of programming with Python, JavaScript, Matlab and C++</p>
 	</div>
     
     <div class="d1">
@@ -37,7 +39,9 @@
     <p><strong>Programmer during Military Service</strong></br>
     Puolustusvoimat - Försvarsmakten - Finnish Defence Forces</br>
     June 2017 – March 2018</br></br>
-    Completed mandatory military service. First two months were basic training. After that I moved to Finnish Defense Research Agency. I programmed several languages and did research on a few topics. I want to say one thing: Tee työtä, jolla on tarkoitus.
+    Completed mandatory military service. First two months were basic training. After that I moved to Finnish Defense Research Agency. 
+	I programmed several languages and did research on a few topics. I want to say one thing: Tee työtä, jolla on tarkoitus.
+	The main programming languages were Python, Matlab and C++.
     </p>
 	</div>
 	
@@ -47,14 +51,21 @@
     NurseBuddy - Home Care Management Software</br>
     May 2016 – August 2016</br></br>
     Product development:
-    - NurseBuddy (www.nursebuddy.fi / www.nursebuddy.co)</p>
+    - NurseBuddy (www.nursebuddy.fi / www.nursebuddy.co)
+	</br>
+	I was a frontend developer. My main goal was to create UIs, be part of the design meetings.
+	It was a busy summer, but very rewarding - I learned a lot about web development and maintained stress well.
+	The main skills were JavaScript, jQuery, HTML5, CSS3, Bootstrap and Marionette.js.</p>
 	
     <h3>Loikka Design Oy</h3>
     <p><strong>Software Developer</strong></br>
     Loikka Design Oy -> NurseBuddy - Home Care Management Software</br>
     May 2015 – August 2015</br></br>
     Product development:
-    - NurseBuddy (www.nursebuddy.fi / www.nursebuddy.co)</p>
+    - NurseBuddy (www.nursebuddy.fi / www.nursebuddy.co)
+	</br>
+	I was part of a small project group. I did some unit testing, fixed bugs and designed webpages for different features (frontend). 
+	I learned JavaScript, HTML, CSS, jQuery, Bootstrap and Marionette.js</p>
 	</div>
 	
     <div class="d5">
