--- a/skills.html
+++ b/skills.html
@@ -33,7 +33,7 @@
 				<span class="fa fa-star checked"></span>
 				<span class="fa fa-star checked"></span>
 				<span class="fa fa-star checked"></span>
-				<span class="fa fa-star"></span>
+				<span class="fa fa-star checked"></span>
 				</div>
 				</li></br>
 				<li><div class="col-sm-6">JavaScript</div>
@@ -58,7 +58,7 @@
 				<div class="col-sm-6">
 				<span class="fa fa-star checked"></span>
 				<span class="fa fa-star checked"></span>
-				<span class="fa fa-star"></span>
+				<span class="fa fa-star checked"></span>
 				<span class="fa fa-star"></span>
 				<span class="fa fa-star"></span>
 				</div>
