Added text to the photo in other.html
The image was not visible by some weird reason. It works in a local
version, but not in Github?

--- a/other.html
+++ b/other.html
@@ -76,6 +76,7 @@
 		<embed src="imgs/poster.pdf" style="width:100%;height:760px;" type="application/pdf">
 		</br>
 		<div class="poster">
+		<h4>Presenting it at ECSM</h4>
 		</div>
 		<div class="d4">
 		<h3>Certificates</h3>
