Fixed language and poster image
Made a few changes for about.html to improve the language. Tried to fix
a picture in other.html

--- a/about.html
+++ b/about.html
@@ -93,33 +93,34 @@
 		
 		<h4>Climbing on top of Halti</h4>
 		<p>
-		A few days before our trip to Halti, I crashed with my bicycle. Many ugly bruises and a few bleeding spots...
-		My toenail was weird. During that trip, I went to one of my friend's wedding. We drove to the Norway side of
+		A few days before our trip to Halti, I crashed with my bicycle in the forest. Usually, I am not clumsy, but that just 
+		happened - No serious injuries (and pain is just a feeling, right?). During that trip, I went to one of my friend's wedding. We drove to the Norway side of
 		the Halti and climbed about 6 hours to the top of the highest mountain in Finland. 80 percent of the trip had
-		awful lot of rocks and boulders. We moved slowly and I didn't even realize risks - or I didn't care. We managed to
+		awful lot of rocks and boulders. We moved slowly and I didn't even realize risks before we climber over the toughest spot. We managed to
 		climb on top and took a few pictures. Then we got back ... slowly, but surely.
 		</p>
 
 		<h4>End of the Military Service</h4>
 		<p>
-		The first two months were quite hard in the military. It was not mentally hard, but physically. I was sick 
-		almost half of that time, because I got some kind of weird flu. Säkylä taught me discipline and I kept my opinionsAfter
+		The first two months were quite hard in the military. It was not mentally hard, but physically. I was not the superman, that 
+		I should have been. I adapted quickly, though. Säkylä taught me discipline and I kept my opinions about efficiency
 		by myself. After the training period in Säkylä, I was 7 months in Riihimäki. In Riihimäki I was a researcher and a programmer.
-		The first three weeks there I was sick as well. So a total of 7 weeks that weird flu irritated me. Time there was
-		a lot easier. Before military service, I was afraid I would see some stupid people in Säkylä. That was not the case.
+		My time there was a lot easier. Before military service, I was afraid I would see some stupid people in Säkylä. That was not the case.
 		My roommates were great guys. I expected a lot from Riihimäki and I was satisfied: The people were smart and friendly.
-		I liked to be there a lot. It was surprisingly rewarding for me.
+		I liked to be there a lot. It was surprisingly rewarding for me, as I got new friends, amazing experiences, work experience, etc.
 		</p>
 	  </div>
 	  <div class="col-sm-6">
 		<h3>Top 3 Courses I have attended</h3>
 		<h4>Speech Communication and Negotiation Skills</h4>
 		<p>
-		<b>Puheviestintä ja Neuvottelutaito</b>
+		<b>in Finnish: Puheviestintä ja Neuvottelutaito</b>
 		</br>
-		The course was probably the best I have attended. I took it a few years ago and I noticed.
-		The first introduction was the day when I decided not to be shy anymore. It worked. I was a 
-		great presentator. After those first few lessons, I have been practising social skills daily.
+		The course was probably the best I have attended. I took it a few years ago and I noticed it changed my mindset.
+		The first session, which had an introduction task, was the day when I decided not to be shy anymore. 
+		I kinda manipulated myself to be something more, like some talented speaker. It worked. I was a 
+		great presentator - Obviously, I have learned a lot and now I probably am even better one. 
+		After those first few lessons, I have been practising social skills on a daily basis.
 		I feel joy, when I discuss with new individuals - that is something I really enjoy.
 		</p>
 		<h4>Pattern Recognition and Machine Learning</h4>
@@ -131,8 +132,11 @@
 		</p>
 		<h4>Bachelor's Thesis</h4>
 		<p>
-		While I wrote my Bachelor's thesis, I was happy. The subject was from my idea. I wanted to help
-		people. I have never been the person, who just complains and does nothing about a thing. This is a 
+		<b>in Finnish: Kandidaatintyö</b>
+		</br>
+		While I wrote my Bachelor's thesis, I was happy. The subject was about social isolation. It was my 
+		idea, but I got the inspiration from Finnish Presidential candidates. I wanted to help people with an actual
+		solution. I have never been the person, who just complains and does nothing about a thing. This is a 
 		proof of that. I find solutions to real-world problems. I apply computer science, statistics, 
 		mathematics and machine learning into any case and poof... there might be something to report.
 		</p>
