--- a/other.html
+++ b/other.html
@@ -73,7 +73,7 @@
 	  </div>
 	  <div class="col-sm-6">
 	    <h4>Poster about Finding Outcasts in Social Networks</h4>
-		<embed src="imgs/poster.pdf" style="width:100%;height:760px;" type="application/pdf">
+		<embed src="imgs/poster.pdf" style="width:100%;height:760px;" type="application/pdf"></embed>
 		</br>
 		<div class="poster">
 		<h4>Presenting it at ECSM</h4>
